# Ambient-Code

./: .gitignore  README.md
context-engine/: README.md  pyproject.toml  smoke_test.py
context-engine/ambient/: __init__.py  main.py  models.py  tailer.py
context-engine/ambient/db/: __init__.py  store.py
context-engine/ambient/indexer/: __init__.py  symbol_index.py
context-engine/ambient/velocity/: __init__.py  tracker.py
context-engine/tests/: conftest.py  test_integration.py  test_models.py  test_store.py  test_symbol_index.py  test_tailer.py  test_velocity.py
docs/: README.md  contributing.md  layer1.md  layer2.md  layer3.md  tests.md
extension/: .eslintrc.json  README.md  package-lock.json  package.json
extension/src/: extension.ts  types.ts
extension/src/collectors/: cursorTracker.ts  editStream.ts  fileWatcher.ts  gitWatcher.ts
extension/src/findings/: findingsWatcher.ts
extension/src/queue/: eventQueue.ts
insight-engine/: README.md  pyproject.toml
insight-engine/ambient_insight/: __init__.py  main.py  models.py  reader.py  writer.py
insight-engine/ambient_insight/llm/: __init__.py  client.py  prompts.py
insight-engine/ambient_insight/triggers/: __init__.py  base.py  long_function.py  uncovered.py  velocity.py
insight-engine/tests/: conftest.py  test_main.py  test_models.py  test_prompts.py  test_reader.py  test_triggers.py  test_writer.py
