[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-insight"
version = "0.1.0"
description = "Ambient Code — Layer 3 Insight Engine: pattern triggers, LLM reasoning, and findings surfacing."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
ambient-insight = "ambient_insight.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["ambient_insight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM", "B"]
ignore = ["B008"]
